[gd_scene load_steps=3 format=3 uid="uid://badg0iq5jidyy"]

[ext_resource type="Script" path="res://scripts/return.gd" id="1_onpqe"]

[sub_resource type="LabelSettings" id="LabelSettings_die7y"]
font_size = 25
font_color = Color(0.681682, 0.133873, 0, 1)

[node name="Return" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onpqe")

[node name="back" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_right = 255.0
offset_bottom = 31.0
text = "
"

[node name="backBox" type="ColorRect" parent="back"]
layout_mode = 0
offset_left = -2.0
offset_top = 1.0
offset_right = 255.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="back"]
layout_mode = 0
offset_top = -2.0
offset_right = 254.0
offset_bottom = 35.0
text = "Go Back"
label_settings = SubResource("LabelSettings_die7y")
horizontal_alignment = 1

[connection signal="mouse_entered" from="back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
